# generateur-mails

./: .gitignore  CLAUDE.md  package-lock.json  package.json
.claude/: launch.json
.github/workflows/: build.yml  deploy-pages.yml
src/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/public/: privacy.html
src/public/ColleurMailSF_extracted/: popup.js
