[package]
name = "generateur-mails"
version = "1.0.0"
description = "Générateur de mails & SMS"
authors = ["Benjamin Magnier"]
edition = "2021"

[lib]
name = "generateur_mails_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
